top-banner upload

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kazolis-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="pink-color">kajol's</span> Univers</h1>
+            <h3>Love is life!</h3>
+            <p>Love has been a favored topic of philosophers, poets, writers, and scientists for generations, and
+                different
+                people and groups have often fought about its definition.
+
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/kazoli-das-5a50511b4/">console with
+                me</a>
+        </div>
+        <div class="half-width">
+            <img src="kajol.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
