--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
             <img src="kajol.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream big</h1>
+            <h2> Become a web-Developer </h2>
+            <p>A web developer is a programmer who specializes in, or is specifically engaged in, the development of
+                World Wide Web applications using a client–server model. ... A web content management system is often
+                used to develop and maintain web applications</p>
+            <a class="link-button" target="_blank" href=""> DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
