--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="pink-color">kajol's</span> Univers</h1>
@@ -30,7 +30,7 @@
             <img src="kajol.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="my-bg2.png" alt="">
         </div>
@@ -44,6 +44,37 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+                <h1>Baby web developer</h1>
+                <h3 class="pink-color">2022-2024|Hero learner </h3>
+                <p>Learn the basics of how websites work, front-end vs back-end, and using a code editor
+                    Learn basic HTML, CSS, and JavaScript
+                    Learn tools: package managers, build tools, version control
+                    Learn Sass, responsive design, JavaScript frameworks
+                    Learn back-end basics: servers and databases, programming languages</p>
+
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h1>Full stack developer</h1>
+                <h3 class="pink-color">2024-Present| Pro level Developer </h3>
+                <p>
+                    My personal definition of a professional developer is a developer who is able to build and maintain
+                    a
+                    commercial piece of software. In other words, if said developer made or edited software, and that
+                    software is generating money for someone somewhere even indirectly, then the developer who made it
+                    is
+                    professional
+                </p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>@ kajol 2021,a programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
